--- a/site/css/links.css
+++ b/site/css/links.css
@@ -14,9 +14,31 @@ a:visited {
 
 a:hover {
    text-decoration: none;
-   opacity: 50%;
 }
 
-/* a:active {
+a:active {
    background-color: #fff;
-} */
+}
+
+/* Grow */
+.hvr-grow {
+   display: inline-block;
+   vertical-align: middle;
+   -webkit-transform: translateZ(0);
+   transform: translateZ(0);
+   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+   -webkit-backface-visibility: hidden;
+   backface-visibility: hidden;
+   -moz-osx-font-smoothing: grayscale;
+   -webkit-transition-duration: .3s;
+   transition-duration: .3s;
+   -webkit-transition-property: transform;
+   transition-property: transform;
+}
+
+.hvr-grow:hover,
+.hvr-grow:focus,
+.hvr-grow:active {
+   -webkit-transform: scale(1.1);
+   transform: scale(1.1);
+}
