--- a/site/css/style.css
+++ b/site/css/style.css
@@ -2,17 +2,23 @@ header {
    background-color: #000;
 }
 
+footer {
+   background-color: #000;
+}
+
 h1 {
    /* background-color: #000; */
    color: #fff;
    padding: 2.8em 3em;
    text-align: center;
    font-size: 100px;
-   font-family: 'Shadows Into Light', cursive;
+   font-family: 'Shadows into light', cursive;
 }
 
 p {
    font-family: 'Assistant', sans-serif;
+   font-size: 16px;
+   line-height: 2em;
 }
 
 .Button {
@@ -35,8 +41,75 @@ p {
 }
 
 .Menu {
-   background-color: #fff;
+   /* background-color: #fff; */
+   background-image: url('../img/MenuBackground.jpg');
+   -webkit-background-size: cover;
+   -moz-background-size: cover;
+   -o-background-size: cover;
+   background-size: cover;
    padding-left: 5em;
    padding-top: 3em;
    padding-bottom: 3em;
+}
+
+.Shadowsfont {
+   color: red;
+   font-family: 'Shadows into light', cursive;
+   font-size: 32px;
+}
+
+.SectionText {
+   padding-top: 5em;
+   padding-bottom: 5em;
+   padding-left: 10em;
+   padding-right: 10em;
+}
+
+.footerText {
+   font-family: 'Assistant', sans-serif;
+   font-size: 24px;
+   color: #fff;
+   text-align: right;
+}
+
+.footerimage {
+   text-align: left;
+   padding-left: 6em;
+   padding-top: 6em;
+   padding-bottom: 0
+   /* float: left; */
+}
+
+.SocialMedia {
+   text-align: center;
+   font-size: 48px;
+   color: #fff;
+}
+
+.in-betweentext {
+   padding-left: 15em;
+   padding-right: 23em;
+}
+
+.figurecaption {
+   color: #ccc;
+   font-style: italic;
+}
+
+.Yellow {
+   font-family: 'Shadows into light', cursive;
+   font-size: 32px;
+   color: #ffcf59;
+}
+
+.Orange {
+   font-family: 'Shadows into light', cursive;
+   font-size: 32px;
+   color: #ffa765;
+}
+
+.Red {
+   font-family: 'Shadows into light', cursive;
+   font-size: 32px;
+   color: #f36666;
 }
