--- a/site/css/links.css
+++ b/site/css/links.css
@@ -5,11 +5,11 @@ a {
 
 a:link {
    text-decoration: none;
-   color: #fff;
+   color: #000;
 }
 
 a:visited {
-   color: #fff;
+   color: #000;
 }
 
 a:hover {
